--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -16,7 +16,9 @@
     "angular-moment": "^0.10.3",
     "angular-animate": "1.6.3",
     "font-awesome": "^4.7.0",
-    "components-font-awesome": "^4.7.0"
+    "components-font-awesome": "^4.7.0",
+    "angular-ui-bootstrap-fontawesome": "^0.3.0",
+    "angular-momentjs": "^0.2.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.6.3"
