--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,10 +1,8 @@
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
 spring.database.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/mrp
+spring.datasource.url=jdbc:postgresql://localhost:5432/Mrp
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=lolxd123
 hibernate.show_sql=true
-flyway.schemas=public
-#flyway.baseline-on-migrate=true
-#flyway.check-location=true
-#flyway.locations=resources/db/migration
+flyway.schemas=mrpdevdevdeb
+spring.jpa.properties.hibernate.default_schema=mrpdevdevdeb
